--- a/src/components/home.html
+++ b/src/components/home.html
@@ -1,5 +1,8 @@
 <div>
-  <img ng-src="static/img/logo.jpg">
+  <img src="../../static/img/logo.jpg">
   <p>{{$ctrl.msg}}</p>
   <p>Hello EMCAScript6</p>
+
+  <div class="class1"></div>
+  <dic class="class2"></dic>
 </div>
